[package]
name = "flaawn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
lazy_static = "1.4.0"
flawn_proc = { path = "./flawn_proc" }
default_macro = "0.2.1"
httparse = "1.5.1"
rand = "0.8.4"

[lib]
name = "flaawn"
path = "src/lib.rs"