[package]
name = "flawn_proc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.77", features = ["full", "extra-traits"] }
quote = "1.0.9"
rand = "0.8.0"

[lib]
name = "flawn_proc"
proc-macro=true